<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:elevation="@dimen/_5sdp"
        app:cardBackgroundColor="@color/app_background"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/referenceTitle"
                style="@style/dialog_heading"
                android:layout_width="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/preferenceDescription"
                style="@style/dialog_description"
                android:layout_gravity="center" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/preferenceBTC"
                    style="@style/dialog_description"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="@string/btc"
                    app:fontFamily="@font/gilroy_semibold" />

                <CheckBox
                    android:id="@+id/checkBTC"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp">

                <TextView
                    android:id="@+id/preferenceJSL"
                    style="@style/dialog_description"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="@string/jsl"
                    app:fontFamily="@font/gilroy_semibold" />

                <CheckBox
                    android:id="@+id/checkJSL"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>


            <androidx.cardview.widget.CardView
                style="@style/button_style"


                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp">

                <TextView
                    android:id="@+id/ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gilroy_semibold"
                    android:gravity="center"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:fontFamily="@font/gilroy_semibold" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>