<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/llMain"
        style="@style/app_layout_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_25sdp"
            android:backgroundTint="@color/app_action_bar_button"
            android:src="@drawable/truck_logo" />

        <androidx.cardview.widget.CardView
            android:id="@+id/companyLoginLayout"
            style="@style/text_card_view"
            android:layout_centerInParent="true">

            <EditText
                android:id="@+id/companyUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="name"
                android:background="@color/white"
                android:fontFamily="@font/gilroy_semibold"
                android:hint="@string/user_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"

                android:padding="@dimen/_12sdp"
                android:textColorHint="@color/color_hint"
                app:fontFamily="@font/gilroy_semibold" />


        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/employeeLoginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/logo"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.cardview.widget.CardView style="@style/text_card_view">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="name"
                    android:background="@color/white"
                    android:fontFamily="@font/gilroy_semibold"
                    android:hint="@string/user_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:padding="@dimen/_12sdp"
                    android:textColorHint="@color/color_hint"
                    app:fontFamily="@font/gilroy_semibold" />


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/text_card_view"
                android:layout_marginTop="@dimen/_15sdp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="phone"
                    android:background="@color/white"
                    android:fontFamily="@font/gilroy_semibold"
                    android:hint="@string/password"
                    android:inputType="phone"
                    android:padding="@dimen/_12sdp"
                    android:textColorHint="@color/color_hint"
                    app:fontFamily="@font/gilroy_semibold"
                    tools:ignore="TextFields" />


            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <androidx.cardview.widget.CardView
            style="@style/button_style"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_20sdp">

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gilroy_semibold"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:fontFamily="@font/gilroy_semibold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/buttonLoader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:scaleType="fitXY"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="parent"
                app:lottie_fileName="lottie_button_loader.json"
                app:lottie_loop="true"
                app:lottie_speed=".8" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>